pmd and checkstyle recommendations